publish: edit about page and tweak general styles
generated from commit 4867db38e733812a74e74a03d22955b801551bac

--- a/about/index.html
+++ b/about/index.html
@@ -48,14 +48,17 @@
 
 <ul>
 <li>Text files</li>
-<li>Python</li>
-<li>Scala</li>
 <li>Code golfing</li>
-<li>The game of Go</li>
-<li>Customizing everything</li>
-<li>Street fighter</li>
+<li>The game of Go (~5k)</li>
+<li>Customizing <em>everything</em></li>
+<li>Street Fighter</li>
+<li>Python, Scala, Typescript</li>
 <li>Font kerning</li>
 </ul>
+
+<p>Interested in talking about one of these subjects?</p>
+
+<p>Hit me up by mail down below :)</p>
 
 <h1 id="credits:6083a88ee3411b0d17ce02d738f69d47">Credits</h1>
 
@@ -64,6 +67,7 @@
 <ul>
 <li><a href="https://gohugo.io">Hugo</a></li>
 <li><a href="https://github.com/digitalcraftsman/hugo-cactus-theme">hugo-cactus-theme</a></li>
+<li><a href="https://github.com/X1011/git-directory-deploy">git-directory-deploy</a></li>
 </ul>
 
                 </section>
