--- a/test/index.html
+++ b/test/index.html
@@ -235,7 +235,21 @@ nil.</p>
                 </section>
             </footer>
 
-            
+            <div id="disqus_thread"></div>
+<script type="text/javascript">
+    var disqus_shortname = 'commentblocks';
+    var disqus_identifier = 'http:\/\/tenchi2xh.github.io\/test\/';
+    var disqus_title = 'This is a test';
+    var disqus_url = 'http:\/\/tenchi2xh.github.io\/test\/';
+
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 
             <ul id="post-list" class="archive readmore">
     <h3>READ MORE</h3>
