publish: added animated background, fixed list links css
generated from commit be4eae80e631250eb1dc3ea31efc6810a0b1cfe5

--- a/about/index.html
+++ b/about/index.html
@@ -68,6 +68,7 @@
 <li><a href="https://gohugo.io">Hugo</a></li>
 <li><a href="https://github.com/digitalcraftsman/hugo-cactus-theme">hugo-cactus-theme</a></li>
 <li><a href="https://github.com/X1011/git-directory-deploy">git-directory-deploy</a></li>
+<li><a href="https://github.com/jnicol/particleground/pull/15">Zodiac</a></li>
 </ul>
 
                 </section>
@@ -135,6 +136,8 @@
         </section>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="http://tenchi.team2xh.net/js/jquery.particleground.js"></script>
+<script src="http://tenchi.team2xh.net/js/zodiac.js"></script>
 <script src="http://tenchi.team2xh.net/js/main.js"></script>
 
 <script>
