publish: add soundcloud button
generated from commit 97bdff0becfe93194eae1a4000ea93ba4a31e81c

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <a class="symbol" href="https://www.github.com/Tenchi2xh">&#xe437;</a>
     <a class="symbol" href="https://www.twitter.com/2xhTenchi">&#xe486;</a>
     <a class="symbol" href="http://codegolf.stackexchange.com/users/49508/tenchi2xh">&#xe481;</a>
+    <a class="symbol" href="https://soundcloud.com/tenchi2xh">&#xe478;</a>
     <a class="symbol" href="https://www.youtube.com/user/2xhTenchi">&#xe499;</a>
 </div>
 
