--- a/about/index.html
+++ b/about/index.html
@@ -48,11 +48,12 @@
 
 <ul>
 <li>Text files</li>
+<li>Terminals</li>
 <li>Code golfing</li>
 <li><a href="https://en.wikipedia.org/wiki/Go_%28game%29">The game of Go</a> (~5k)</li>
 <li>Customizing <em>everything</em></li>
 <li>Street Fighter</li>
-<li>Python, Scala, Typescript</li>
+<li>Python, Scala</li>
 <li>Font kerning</li>
 </ul>
 
